linux: implement statx(2)

PR:		252106
Reviewed By:	dchagin
Differential Revision:	https://reviews.freebsd.org/D30466

(cherry picked from commit 2362ad457a01d56d87e74823599578ab37bdbfb9)